--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -43,7 +43,7 @@
           aria-label="breadcrumb"
         >
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item"><a href="/" style="text-decoration: none;">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">
               <%= obj.fireName %> <%= obj.lastName %>
             </li>
