--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -41,7 +41,7 @@
         <nav class="px-2 mt-4 d-flex flex-wrap justify-content-between" aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/" style="text-decoration: none;">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Ali Hassan</li>
+            <li class="breadcrumb-item active" aria-current="page"><%= obj.FirstName %> <%= obj.LastName %></li>
           </ol>
 
 
