--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -41,8 +41,10 @@
         <nav class="px-2 mt-4 d-flex flex-wrap justify-content-between" aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/" style="text-decoration: none;">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page"><%= obj.FirstName %> <%= obj.LastName %></li>
-          </ol>
+            <li class="breadcrumb-item active" aria-current="page">
+              <%= obj.fireName %> <%= obj.lastName %>
+            </li>       
+            </ol>
 
 
           <p class="me-md-5"> <span class="fw-medium fs-6">Id :</span> 
