--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,6 +36,8 @@
 
         <% if (arr.length === 0) { %>
         <h1 style="text-align: center; margin-top: 4rem;">No data available</h1>
+         <h3 style="text-align: center; margin-top: 4rem;">Add customer</h1>
+
         <% } %>
 
 
